--- a/domain.yml
+++ b/domain.yml
@@ -33,10 +33,9 @@ actions:
 - utter_greet
 - utter_goodbye
 
-templates:
+responses:
   utter_greet:
   - text: "Hi. What are you looking for?"
-  - text: "Hey there! Please choose one of the healthcare facility options:"
   - text: "Hello! What can I help you find today?"
 
   utter_goodbye:
@@ -48,25 +47,25 @@ templates:
   - text: "My pleasure."
   - text: "You are welcome!"
 
-responses:
-  utter_greet:
-  - text: "Hey! How are you?"
+# responses:
+#   utter_greet:
+#   - text: "Hey! How are you?"
 
-  utter_cheer_up:
-  - text: "Here is something to cheer you up:"
-    image: "https://i.imgur.com/nGF1K8f.jpg"
+#   utter_cheer_up:
+#   - text: "Here is something to cheer you up:"
+#     image: "https://i.imgur.com/nGF1K8f.jpg"
 
-  utter_did_that_help:
-  - text: "Did that help you?"
+#   utter_did_that_help:
+#   - text: "Did that help you?"
 
-  utter_happy:
-  - text: "Great, carry on!"
+#   utter_happy:
+#   - text: "Great, carry on!"
 
-  utter_goodbye:
-  - text: "Bye"
+#   utter_goodbye:
+#   - text: "Bye"
 
-  utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
+#   utter_iamabot:
+#   - text: "I am a bot, powered by Rasa."
 
 session_config:
   session_expiration_time: 60
