--- a/domain.yml
+++ b/domain.yml
@@ -8,13 +8,14 @@ intents:
   - bot_challenge
   - search_fhir
   - inform
+  - clear_search
 
 entities:
   - fhir_resource
   - search_param
   - search_qualifier
   - search_value
-  - search_results
+
 
 slots:
   fhir_resource:
@@ -25,6 +26,10 @@ slots:
     type: unfeaturized
   search_value:
     type: unfeaturized
+  search_results:
+    type: unfeaturized
+  search_string:
+    type: unfeaturized
 
 forms:
 - fhir_search_form
@@ -33,6 +38,7 @@ actions:
 - utter_noworries
 - utter_greet
 - utter_goodbye
+- clear_search_action
 
 responses:
   utter_greet:
@@ -61,6 +67,10 @@ responses:
   
   utter_ask_search_value:
   - text: "What do you want to look for?"
+
+  utter_confirm:
+  - text: "Are you sure?"
+  - text: "Please confirm"
 
 # responses:
 #   utter_greet:
